<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_username"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_user_reg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
                android:inputType="textFilter"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tv_pass_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/str_password"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_pass_reg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/str_email"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_email_reg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/str_fullname"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_fullname_reg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/str_school"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_school_reg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/str_address"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_address_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="top|left"
                android:lines="3"
                android:padding="5dp"
                android:singleLine="false"
                android:textColor="#000000"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/btn_save_reg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_btn"
                android:text="@string/str_save"
                android:textColor="#122392"
                android:textSize="14sp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>